I agree to the CLA

--- a/.github/workflows/cla-validate.yml
+++ b/.github/workflows/cla-validate.yml
@@ -3,6 +3,7 @@ name: CLA Validator
 on:
   pull_request:
     types: [opened, synchronize, reopened]
+  workflow_dispatch:
 
 jobs:
   validate-cla:
