--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-  "python.languageServer": "Jedi"
+  "python.languageServer": "Jedi",
+  "STARLIMS.servers": [
+    {
+      "name": "Frndev Server",
+      "url": "https://frndev.starlimscloud.com/fuji.demo/",
+      "user": "SYSADM",
+      "urlSuffix": "lims"
+    }
+  ],
+  "STARLIMS.selectedServer": "Frndev Server"
 } 
