--- a/packages/typescript/sdk/package.json
+++ b/packages/typescript/sdk/package.json
@@ -70,7 +70,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/analytiq/doc-router.git",
-    "directory": "packages/typescript/docrouter-sdk"
+    "directory": "packages/typescript/sdk"
   },
   "bugs": {
     "url": "https://github.com/analytiq/doc-router/issues"
