--- a/deploy/kubernetes/base/frontend/deployment.yaml
+++ b/deploy/kubernetes/base/frontend/deployment.yaml
@@ -17,6 +17,8 @@ spec:
         app: frontend
         component: frontend
     spec:
+      securityContext:
+        fsGroup: 1000
       containers:
       - name: frontend
         image: analytiqhub/doc-router-frontend:latest
@@ -25,6 +27,8 @@ spec:
         - containerPort: 3000
           name: http
           protocol: TCP
+        command: ["sh", "-c"]
+        args: ["ulimit -n 65536 && cd /app/packages/typescript/frontend && npm run start"]
         envFrom:
         - configMapRef:
             name: doc-router-config
@@ -33,6 +37,12 @@ spec:
         env:
         - name: NODE_ENV
           value: "production"
+        securityContext:
+          runAsNonRoot: false
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+            - ALL
         resources:
           requests:
             memory: "512Mi"
@@ -44,13 +54,15 @@ spec:
           httpGet:
             path: /
             port: 3000
-          initialDelaySeconds: 30
-          periodSeconds: 10
-          timeoutSeconds: 5
+          initialDelaySeconds: 60
+          periodSeconds: 30
+          timeoutSeconds: 10
+          failureThreshold: 3
         readinessProbe:
           httpGet:
             path: /
             port: 3000
-          initialDelaySeconds: 10
-          periodSeconds: 5
-          timeoutSeconds: 3
+          initialDelaySeconds: 30
+          periodSeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 3
