--- a/deploy/kubernetes/base/configmap.yaml
+++ b/deploy/kubernetes/base/configmap.yaml
@@ -4,25 +4,9 @@ metadata:
   name: doc-router-config
   namespace: doc-router
 data:
-  # Environment
-  ENV: "dev"
-  
-  # MongoDB
-  MONGODB_URI: "mongodb://admin:admin@mongodb.doc-router.svc.cluster.local:27017?authSource=admin"
-  
-  # FastAPI
+  ENV: "test"
   FASTAPI_BACKEND_URL: "http://backend.doc-router.svc.cluster.local:8000"
-  FASTAPI_ROOT_PATH: "/fastapi"
-  
-  # NextAuth
+  FASTAPI_ROOT_PATH: "/"
   NEXTAUTH_URL: "http://localhost:3000"
-  
-  # Frontend
   NEXT_PUBLIC_FASTAPI_FRONTEND_URL: "http://localhost:8000"
-  
-  # Admin
-  ADMIN_EMAIL: "admin"
-  ADMIN_PASSWORD: "admin"
-  
-  # Worker
-  N_WORKERS: "1"
+  N_WORKERS: "4"
