--- a/deploy/kubernetes/base/backend/deployment.yaml
+++ b/deploy/kubernetes/base/backend/deployment.yaml
@@ -28,7 +28,7 @@ spec:
           name: http
           protocol: TCP
         command: ["sh", "-c"]
-        args: ["cd /app/packages/python && ulimit -n 65536 && uvicorn app.main:app --host 0.0.0.0 --port 8000"]
+        args: ["ulimit -n 65536; cd /app/packages/python && exec uvicorn app.main:app --host 0.0.0.0 --port 8000"]
         envFrom:
         - configMapRef:
             name: doc-router-config
@@ -39,7 +39,9 @@ spec:
           allowPrivilegeEscalation: false
           capabilities:
             drop:
-            - ALL
+              - ALL
+          # Note: ulimits are set via command, not securityContext
+          # Kubernetes doesn't support ulimit in securityContext without privileged mode
         resources:
           requests:
             memory: "512Mi"
