--- a/deploy/kubernetes/overlays/kind/ingress-patch.yaml
+++ b/deploy/kubernetes/overlays/kind/ingress-patch.yaml
@@ -7,13 +7,13 @@ metadata:
     # For kind, we can use NodePort or a simple ingress
     # Rewrite /fastapi to / (strip prefix for backend routing)
     # FastAPI root_path=/fastapi is for URL generation in docs, not routing
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   ingressClassName: nginx
   rules:
   - http:
       paths:
+      # Frontend - no rewrite, serve as-is
       - path: /
         pathType: Prefix
         backend:
@@ -21,6 +21,7 @@ spec:
             name: frontend
             port:
               number: 3000
+      # Backend - rewrite /fastapi to / (strip prefix)
       - path: /fastapi(/|$)(.*)
         pathType: ImplementationSpecific
         backend:
@@ -28,3 +29,6 @@ spec:
             name: backend
             port:
               number: 8000
+        # Apply rewrite only to this path
+        # Rewrite /fastapi/xyz to /xyz for backend
+        # The $2 captures everything after /fastapi/
