--- a/packages/typescript/mcp/package.json
+++ b/packages/typescript/mcp/package.json
@@ -22,6 +22,7 @@
     "dev": "tsup --watch",
     "start": "node dist/index.js",
     "start:dev": "tsx src/index.ts",
+    "debug": "./debug.sh",
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint src --ext .ts,.tsx",
