--- a/packages/typescript/mcp/package.json
+++ b/packages/typescript/mcp/package.json
@@ -41,8 +41,11 @@
   "license": "MIT",
   "dependencies": {
     "@docrouter/sdk": "^1.0.0",
-    "@modelcontextprotocol/sdk": "^1.20.0",
+    "@modelcontextprotocol/sdk": "^1.25.3",
     "zod": "^3.22.0"
+  },
+  "overrides": {
+    "qs": ">=6.14.1"
   },
   "devDependencies": {
     "@types/jest": "^29.5.0",
