--- a/packages/python/requirements.txt
+++ b/packages/python/requirements.txt
@@ -54,6 +54,7 @@ pycparser==3.0
 pydantic==2.12.5
 pydantic-settings==2.12.0
 pymongo==4.16.0
+Pillow==11.0.0
 pytest==9.0.2
 pytest-asyncio==1.3.0
 pytest-cov==7.0.0
