--- a/packages/typescript/frontend/package.json
+++ b/packages/typescript/frontend/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --webpack",
-    "build": "next build --webpack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
-    "lint": "eslint src/"
+    "lint": "eslint src/",
+    "postinstall": "node scripts/patch-formio-css.js"
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.5.3",
@@ -34,8 +35,7 @@
     "file-saver": "^2.0.5",
     "formiojs": "^4.21.7",
     "jsonwebtoken": "^9.0.2",
-    "monaco-editor": "^0.52.2",
-    "monaco-editor-webpack-plugin": "^7.1.0",
+    "monaco-editor": "^0.55",
     "mongodb": "^6.9.0",
     "next": "^16.1.4",
     "next-auth": "^4.24.13",
@@ -59,7 +59,6 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash": "^4.17.14",
     "@types/next": "^8.0.7",
-    "@types/next-auth": "^3.15.0",
     "@types/node": "^20",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.1",
